# pq

./: .gitignore  ALGORITHMS.md  BLAKE3-BUILD.md  CLAUDE.md  LICENSE  LICENSE-THIRD-PARTY  PASSWORD-BASED-HYBRID.md  PASSWORD-ENC.md  README.md  UUID-DERIVATION.md  XKCP.md  package.sh  runtests.sh
data/: alice.tray  alice1024.tray  alice768.tray  alicia.bin.tray  alicia.enc.tray  pass.txt
docs/superpowers/plans/: 2026-03-21-obi-wan-libcrystals-backend.md  2026-03-21-scotty-libcrystals-backend.md  2026-03-23-obi-wan-padme-libcrystals-1.2.md  2026-03-24-hybrid-signatures.md  2026-03-25-remove-msgpack.md
docs/superpowers/specs/: 2026-03-21-scotty-libcrystals-backend-design.md  2026-03-24-hybrid-signatures-design.md
geordi/: README.md
geordi/src/: CMakeLists.txt  base64.cpp  base64.hpp  dilithium_ops.cpp  main.cpp  pem_io.cpp  pem_io.hpp
include/: tray.hpp
libcrystals/: CMakeLists.txt  README.md  install.sh
libcrystals-1.0/: CMakeLists.txt  install.sh
libcrystals-1.0/include/crystals/: crystals.hpp
libcrystals-1.0/src/: armor.cpp  base64.hpp  dilithium_ops.cpp  kyber_ops.cpp  pw_format.hpp  secure_tray.cpp  secure_tray.hpp  token_cmd.cpp  token_format.hpp  tray.cpp  tray.hpp  yaml_io.hpp
libcrystals-1.1/: CMakeLists.txt  README.md  install.sh
libcrystals-1.1/include/crystals/: crystals.hpp
libcrystals-1.1/src/: dilithium_api.hpp  dilithium_sig.cpp  kyber_ops.hpp  mceliece_kem.cpp  mceliece_kem.hpp  mceliece_ops.cpp  mceliece_ops.hpp  tray.cpp  tray.hpp  tray_pack.cpp  tray_reader.cpp  yaml_io.cpp
libcrystals-1.1/test/: api_stability_test-1.0.cpp  api_stability_test-1.1.cpp  test_crystals.cpp
libcrystals-1.2/: CMakeLists.txt  README.md  install.sh
libcrystals-1.2/include/crystals/: crystals.hpp
libcrystals-1.2/src/: ec_kem.cpp  ec_ops.cpp  ec_ops.hpp  ec_sig.hpp  hyke_format.hpp  mceliece_randombytes.c  oqs_ops.cpp  oqs_ops.hpp  pw_crypt.cpp  pw_crypt.hpp  slhdsa_ops.cpp  slhdsa_ops.hpp  slhdsa_sig.hpp  token_cmd.hpp  tray.cpp  tray.hpp  tray_pack.hpp  tray_reader.cpp  tray_reader.hpp
libcrystals-1.2/test/: api_stability_test-1.0.cpp  api_stability_test-1.2.cpp  test_crystals.cpp
libcrystals/include/crystals/: crystals.hpp  dilithium_ops.hpp  dilithium_sig.hpp  ec_kem.hpp  hyke_format.hpp  kyber_api.hpp  pw_format.hpp  secure_tray.hpp  slhdsa_ops.hpp  token_format.hpp  tray.hpp  tray_pack.hpp  tray_reader.hpp  yaml_io.hpp
libcrystals/src/: armor.cpp  base64.cpp  dilithium_ops.cpp  dilithium_sig.cpp  ec_kem.cpp  ec_ops.cpp  ec_sig.cpp  kyber_kem.cpp  kyber_ops.cpp  mceliece_ops.cpp  pw_crypt.cpp  secure_tray.cpp  slhdsa_ops.cpp  token_cmd.cpp  tray.cpp  tray_pack.cpp  tray_reader.cpp  yaml_io.cpp
libcrystals/test/: test_crystals.cpp
luke/: CMakeLists.txt  README.md
luke/src/: aes_gcm.hpp  base64.cpp  bundle.hpp  kyber_api.hpp  kyber_ops.cpp  kyber_ops.hpp  main.cpp  password.hpp  pem_io.cpp  pem_io.hpp
misc/: Makefile  alice.pk  alice.sk  hashpass  hashpass.cpp  kem.ct  secret.ss  shannon.cpp  test.txt
msgpack/: CMakeLists.txt
msgpack/src/: tray_pack.cpp  tray_pack.hpp
msgpack/test/: test_from_yaml.cpp  test_roundtrip.cpp
obi-wan/: CMakeLists.txt  README.md
obi-wan/src/: armor.hpp  base64.cpp  dilithium_api.hpp  ec_sig.cpp  hyke_format.hpp  kdf.hpp  kyber_api.hpp  kyber_kem.cpp  kyber_kem.hpp  main.cpp  mceliece_randombytes.c  pw_crypt.cpp  slhdsa_sig.cpp  symmetric.hpp  token_cmd.cpp  token_format.hpp  tray_reader.cpp
padme/: CMakeLists.txt  README.md
padme/src/: bitmap_font.hpp  encaps_crypto.hpp  main.cpp
scotty/: CMakeLists.txt  README.md
scotty/src/: CMakeLists.txt  dilithium_api.hpp  dilithium_ops.cpp  dilithium_ops.hpp  ec_ops.cpp  ec_ops.hpp  kyber_api.hpp  kyber_ops.cpp  kyber_ops.hpp  main.cpp  mceliece_ops.cpp  mceliece_ops.hpp  mceliece_randombytes.c  pem_io.cpp  pem_io.hpp  secure_tray.cpp  secure_tray.hpp  slhdsa_ops.cpp  symmetric.hpp  tray.cpp  yaml_io.cpp  yaml_io.hpp
static-verify/: CMakeLists.txt  main.c  test_dilithium.c  test_kyber.c
tmp/: alice.tray  alice1024.tray  alice25519.tray  alice768.tray  alicepq.tray  dave.tray  test-tok.txt
