cmake_minimum_required(VERSION 3.16)
project(crystals LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenSSL REQUIRED)
find_package(yaml-cpp REQUIRED)
find_package(BLAKE3 REQUIRED)
find_package(TBB REQUIRED)

# ── Library paths ─────────────────────────────────────────────────────────────
# CMakeLists.txt lives in pq/libcrystals/; deps are relative from there.
set(KYBER_REF_DIR     "${CMAKE_SOURCE_DIR}/../../kyber/ref")
set(DILITHIUM_REF_DIR "${CMAKE_SOURCE_DIR}/../../dilithium/ref")
set(XKCP_DIR          "${CMAKE_SOURCE_DIR}/../../XKCP")
set(SCRYPT_DIR        "${CMAKE_SOURCE_DIR}/../../scrypt")
set(MSGPACK_INC       "${CMAKE_SOURCE_DIR}/../../msgpack-c/include")

get_filename_component(KYBER_REF_DIR_ABS  "${KYBER_REF_DIR}"     ABSOLUTE)
get_filename_component(DIL_REF_DIR_ABS    "${DILITHIUM_REF_DIR}" ABSOLUTE)
get_filename_component(XKCP_DIR_ABS       "${XKCP_DIR}"          ABSOLUTE)
get_filename_component(SCRYPT_DIR_ABS     "${SCRYPT_DIR}"        ABSOLUTE)
get_filename_component(MSGPACK_INC_ABS    "${MSGPACK_INC}"       ABSOLUTE)

set(XKCP_LIBDIR "${XKCP_DIR_ABS}/bin/x86-64")
set(XKCP_INC    "${XKCP_DIR_ABS}/bin/x86-64/libXKCP.so.headers")

# ── RPATH ─────────────────────────────────────────────────────────────────────
# Build RPATH: XKCP (dynamic) + TBB (dynamic)
get_target_property(_tbb_loc TBB::tbb IMPORTED_LOCATION_RELEASE)
if(NOT _tbb_loc)
    get_target_property(_tbb_loc TBB::tbb IMPORTED_LOCATION)
endif()
get_filename_component(_tbb_libdir "${_tbb_loc}" DIRECTORY)
set(CMAKE_BUILD_RPATH "${XKCP_LIBDIR}" "${_tbb_libdir}")

# ── Static PQ libraries (via add_subdirectory) ────────────────────────────────
add_subdirectory(../../kyber/ref     kyber_ref_build)
add_subdirectory(../../dilithium/ref dilithium_ref_build)

# ── scrypt sources ────────────────────────────────────────────────────────────
set(SCRYPT_SOURCES
    "${SCRYPT_DIR_ABS}/lib-platform/crypto/crypto_scrypt.c"
    "${SCRYPT_DIR_ABS}/lib/crypto/crypto_scrypt_smix.c"
    "${SCRYPT_DIR_ABS}/libcperciva/alg/sha256.c"
    "${SCRYPT_DIR_ABS}/libcperciva/util/insecure_memzero.c"
    "${SCRYPT_DIR_ABS}/libcperciva/util/warnp.c"
)

# ── crystals static library ───────────────────────────────────────────────────
add_library(crystals STATIC
    src/base64.cpp
    src/ec_ops.cpp
    src/kyber_ops.cpp
    src/dilithium_ops.cpp
    src/tray.cpp
    src/yaml_io.cpp
    src/tray_reader.cpp
    src/tray_pack.cpp
    src/ec_kem.cpp
    src/kyber_kem.cpp
    src/ec_sig.cpp
    src/dilithium_sig.cpp
    src/armor.cpp
    src/pw_crypt.cpp
    src/token_cmd.cpp
    "${KYBER_REF_DIR_ABS}/randombytes.c"
    ${SCRYPT_SOURCES}
)

target_include_directories(crystals
    PUBLIC
        include/
        "${XKCP_INC}"
        "${MSGPACK_INC_ABS}"
    PRIVATE
        "${KYBER_REF_DIR_ABS}"
        "${SCRYPT_DIR_ABS}"
        "${SCRYPT_DIR_ABS}/lib-platform"
        "${SCRYPT_DIR_ABS}/lib/crypto"
        "${SCRYPT_DIR_ABS}/libcperciva/alg"
        "${SCRYPT_DIR_ABS}/libcperciva/util"
        "${SCRYPT_DIR_ABS}/libcperciva/cpusupport"
        "${SCRYPT_DIR_ABS}/libscrypt-kdf"
)

target_compile_definitions(crystals
    PUBLIC  MSGPACK_NO_BOOST
    PRIVATE HAVE_CONFIG_H
)

target_compile_options(crystals PRIVATE -O2 -Wall -Wextra)

target_link_libraries(crystals PUBLIC
    pqcrystals_kyber512_ref
    pqcrystals_kyber768_ref
    pqcrystals_kyber1024_ref
    pqcrystals_kyber_fips202_ref
    pqcrystals_dilithium2_ref
    pqcrystals_dilithium3_ref
    pqcrystals_dilithium5_ref
    pqcrystals_dilithium_fips202_ref
    "${XKCP_LIBDIR}/libXKCP.so"
    "${SCRYPT_DIR_ABS}/.libs/libscrypt_sse2.a"
    "${SCRYPT_DIR_ABS}/.libs/libcperciva_cpusupport_detect.a"
    "${SCRYPT_DIR_ABS}/.libs/libcperciva_shani.a"
    BLAKE3::blake3
    TBB::tbb
    OpenSSL::Crypto
    yaml-cpp
)

# ── test binary ───────────────────────────────────────────────────────────────
add_executable(test_crystals
    test/test_crystals.cpp
    "${KYBER_REF_DIR_ABS}/randombytes.c"
)
target_link_libraries(test_crystals PRIVATE crystals)
target_compile_options(test_crystals PRIVATE -O2 -Wall -Wextra)
